k8s/sandbox/services.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapp
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: "http-to-https"
    kubernetes.io/ingress.global-static-ip-name: "print-nanny-static-ip"
    networking.gke.io/managed-certificates: "sandbox-print-nanny-com-tls"
spec:
  backend:
    serviceName: webapp
    servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: "postgres"
spec:
  selector:
    app: "postgres"
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: NodePort
